# finance-planning-tool

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  _dirs.py  main.py  pyproject.toml
models/: accountInformation.py  account_information.py  bankAccount.py  bank_account.py  bill_base.py  bill_financed.py  bill_recurring.py  bill_revolving_credit.py  enumType.py  financed_bill.py  income.py  interest.py  ledger.py  protocols.py  recurring_bill.py  revolving_credit_bill.py  triggerDays.py  trigger_days.py  utils.py
models/accounts/: __init__.py  account_information.py  bank_account.py
models/bills/: __init__.py  bill_base.py  bill_financed.py  bill_recurring.py  bill_revolving_credit.py
models/core/: __init__.py  chargeable.py  enum_type.py  interest.py  ledger.py  protocols.py  trigger_days.py  utils.py
models/income/: __init__.py  income.py
models/persistence/: __init__.py  json_reader_writer.py  serial_lookup.py  serializer.py
resources/: custom_QTableView.py  main_app.py  main_app.ui  modelManager.py  model_tables.py
src/finance_planning_tool/: __init__.py  main.py
src/finance_planning_tool/models/: __init__.py
src/finance_planning_tool/models/accounts/: account_information.py  (+1 more)
tests/: conftest.py  test_Ledger.py  test_accountInformation.py  test_account_information.py  test_bank_account.py  test_bill_base.py  test_bill_financed.py  test_bill_recurring.py  test_bill_revolving_credit.py  test_enumType.py  test_enum_type.py  test_financed_bill.py  test_income.py  test_interest.py  test_json_reader_writer.py  test_ledger.py  test_recurring_bill.py  test_revolving_credit_bill.py  test_serializer.py  test_triggerDays.py  test_trigger_days.py  test_utils.py
(+13 files in other folders)
